# analytic-url-shortener

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  _models.lua  _uuid.lua  app.lua  config.lua  migrations.lua  util.lua
client/: Dockerfile  app.lua  config.lua  nginx.conf
client/templates/: hits.html  home.html
client/views/: error.etlua  hits.etlua  home.etlua  layout.etlua  ready-url.etlua
doc/: example.http  get-endpoint.http  get-hit.http  get-url-to-redirect.http  post-endpoint.http  post-hit.http
migrations/2024-12-08-122754_create_endpoints/: down.sql  up.sql
migrations/2024-12-08-123032_create_hits/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
