[package]
name = "analytic-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

[dev-dependencies]
cargo-watch = "8"
