[package]
name = "analytic-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
ipnetwork = { version = "0.20.0", features = ["serde"]}

[dev-dependencies]
cargo-watch = "8"
