[package]
name = "analytic-url-shortener"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "chrono", "serde_json", "r2d2", "network-address"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
ipnetwork = { version = "0.20.0", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
cargo-watch = "8"

[[bin]]
name = "aus"
path = "src/main.rs"
